# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  deny.toml  spec.yaml  sqlx-data.json
.github/workflows/: ci.yml
configuration/: base.yaml  production.yaml
migrations/: 20221209114346_add_status_to_subscriptions.sql  20221209115130_make_status_not_null_in_subscriptions.sql  20221209115826_create_subscription_tokens_table.sql  20230105112652_create_users_table.sql  20230106111417_rename_password_column.sql  20230106114137_add_salt_to_users.sql  20230109115126_remove_salt_from_users.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
