[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
config = "0.13.2"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
uuid = { version = "1.2.2", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = [
  "env-filter",
  "registry",
] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tower = "0.4.13"
http = "0.2.8"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
axum = "0.6.1"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]

[dev-dependencies]
claims = "0.7.1"
fake = "~2.3.0"
once_cell = "1.16.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = "0.11.12"
